--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,17 @@ a {
 /* class main */
 .main-title {
   padding: 188px 0;
+  max-width: 1440px;
+  margin: 0 auto;
   background: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office\ 1.jpg);
+  backaround-oosition: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .main-title-text {
   text-align: center;
