goit-markup-hw-04

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ a {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/img-name.jpeg/people-office\ 1.jpg);
+    url(../images/people-office\ 1.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
