--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ a {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/img-name.jpeg/);
+    url(../images/img-name.jpeg/people-office\1.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -136,7 +136,7 @@ a {
 /* button */
 .button {
   display: block;
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
