--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,10 @@ a {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-
+.nav-link::after {
+  position: absolute;
+  
+}
 .contacts {
   font-style: normal;
   margin-left: auto;
@@ -311,6 +314,12 @@ a {
   padding: 100px 0;
   background: #2e2f42;
 }
+.footer-content{
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+.container{ margin-left: 120px;}
 
 .logo-footer {
   display: inline-block;
@@ -327,9 +336,27 @@ a {
   color: #f4f4fd;
 }
 .footer-text {
-  font-weight: 400;
+  max-width: 264px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+}
+
+.footer-social{
+  display: flex;
+}
+.footer-social-text{
+
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;}
+
+.footer-social-list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 16px;
 }
