--- a/css/style.css
+++ b/css/style.css
@@ -80,11 +80,22 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-link::after {
+.nav-link.current {
+  position: relative;
+}
+.nav-link.current::before {
+  content: "";
   position: absolute;
-  
+  border-radius: 2px;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
 }
+
 .contacts {
   font-style: normal;
   margin-left: auto;
@@ -106,7 +117,8 @@ a {
 .nav-link:hover,
 .nav-link:focus,
 .contacts-link:hover,
-.contacts-link:focus {
+.contacts-link:focus,
+.nav-link.current {
   color: #404bbf;
 }
 
@@ -314,12 +326,14 @@ a {
   padding: 100px 0;
   background: #2e2f42;
 }
-.footer-content{
+.footer-content {
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
 }
-.container{ margin-left: 120px;}
+.container {
+  margin-left: 120px;
+}
 
 .logo-footer {
   display: inline-block;
@@ -343,16 +357,16 @@ a {
   color: #f4f4fd;
 }
 
-.footer-social{
+.footer-social {
   display: flex;
 }
-.footer-social-text{
-
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #fff;}
+.footer-social-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+}
 
 .footer-social-list {
   display: flex;
