--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,14 @@ a {
 .hidden {
   padding: 120px 0;
 }
+.li-hidden{
+margin-bottom: 8px;
+border: 1px solid #8e8f99;
+border-radius: 4px;
+width: 264px;
+height: 112px;
+background-color: #f4f4fd;
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
