--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,9 @@ a {
   padding: 120px 0;
 }
 .li-hidden{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 margin-bottom: 8px;
 border: 1px solid #8e8f99;
 border-radius: 4px;
