--- a/css/style.css
+++ b/css/style.css
@@ -178,16 +178,22 @@ a {
 .hidden {
   padding: 120px 0;
 }
-.li-hidden{
+.li-hidden {
   display: flex;
   align-items: center;
   justify-content: center;
-margin-bottom: 8px;
-border: 1px solid #8e8f99;
-border-radius: 4px;
-width: 264px;
-height: 112px;
-background-color: #f4f4fd;
+  margin-bottom: 8px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background-color: #f4f4fd;
+}
+.icon{
+  width: 64px;
+  height: 64px;
+  align-items: center;
+  
 }
 .visually-hidden {
   position: absolute;
