--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,8 @@ a {
 }
 
 .team {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   padding: 120px 0;
   background: #f4f4fd;
 }
@@ -278,15 +280,16 @@ a {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   padding: 32px 0;
-
 }
-.team-icons-list{
-  
-  
+.team-icons-list {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 24px;
+}
+.social-team-icon {
+  margin-top: 8px;
+  fill: #4d5ae5;
 }
 .team-text {
   font-family: "Roboto", sans-serif;
@@ -298,13 +301,7 @@ a {
   text-align: center;
   color: #434455;
 }
-.social-team-icon{
-  
-  
-  margin-top: 8px;
-  fill: #4d5ae5;
-  
-}
+
 /* ourportfolio */
 .port {
   padding: 120px 0 120px 0;
