--- a/css/style.css
+++ b/css/style.css
@@ -254,12 +254,12 @@ a {
 }
 
 .team {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   padding: 120px 0;
   background: #f4f4fd;
 }
 .team-item {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   background: #ffffff;
@@ -277,8 +277,6 @@ a {
   color: #2e2f42;
 }
 .team-subtitle-class {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   padding: 32px 0;
 }
 .team-icons-list {
@@ -287,9 +285,18 @@ a {
   align-items: center;
   gap: 24px;
 }
+.team-list-social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #404bbf;
+  border-radius: 50%;
+}
 .social-team-icon {
   margin-top: 8px;
-  fill: #4d5ae5;
+  fill: #ffffff;
 }
 .team-text {
   font-family: "Roboto", sans-serif;
