--- a/css/style.css
+++ b/css/style.css
@@ -293,11 +293,16 @@ a {
   height: 40px;
   background-color: #4d5ae5;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.team-list-social:hover,
+.team-list-social:focus
+{background-color: #404bbf;}
+
 .social-team-icon {
   justify-content: center;
   align-items: center;
-  fill: #ffffff;
+  fill: #f4f4fd;
 }
 .team-text {
   font-family: "Roboto", sans-serif;
