--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,7 @@ a {
 }
 
 .logo-footer {
+  margin-right: 120px;
   display: inline-block;
   margin-bottom: 16px;
   font-family: "Raleway", sans-serif;
@@ -444,4 +445,7 @@ a {
 .footer-list-soc:hover,
 .footer-list-soc:focus {
   background-color: #31d0aa;
+}
+.social-team-icon{
+  fill: #f4f4fd;
 }
