--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,8 @@ a {
 }
 .port-img-text{
   position: absolute;
-  top:0;
+  left: 0px;
+  top: 0px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -373,6 +374,9 @@ a {
   transform: translateY(100%); 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.port-item:hover .portfolio-img{
+  transform: translateY(0%);
+} 
 .port-subtitle {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
