--- a/css/style.css
+++ b/css/style.css
@@ -346,37 +346,38 @@ a {
   row-gap: 48px;
 }
 .port-item {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: calc((100% - 48px) / 3);
-  
+  transition: box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 .port-item:hover {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
+  transform: translateY(0%);
 }
-.portfolio-img{
+.port-item:hover .port-img-text {
+  transform: translateY(0%);
+}
+
+.portfolio-img {
   position: relative;
   overflow: hidden;
 }
-.port-img-text{
+.port-img-text {
   position: absolute;
   left: 0px;
   top: 0px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:#f4f4fd;
+  color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
   height: 100%;
   width: 100%;
-  transform: translateY(100%); 
+  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.port-item:hover .portfolio-img{
-  transform: translateY(0%);
-} 
+
 .port-subtitle {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
