goit-markup-hw-04

--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,7 @@ a {
   background: #2e2f42;
 }
 .footer-container {
-  align-items: baseline
+  align-items: baseline;
   margin-right: 120px;
 }
 
